Add player joining functionality
Now I'm rocking and rolling. It's only taken an hour or two for this big
commit!

First change to implement this is a tweak to the model to remove the
numeric active players attribute (references to it have been updated,
hopefully everywhere) and allow many-to-many linking of users (players)
to the games.

The game templates have been updated to reflect the number of
players and a given player's options (already joined, able to join,
unable to join).

View added to join a player and the format of the game-specific ones was
tweaked. Not entirely happy with it still so may tweak later. Also
updated the view game view to collect dynamic player info.

--- a/django/bluffgameserver/templates/bluffgameserver/game_summary.html
+++ b/django/bluffgameserver/templates/bluffgameserver/game_summary.html
@@ -2,8 +2,12 @@
 {% block body %}
 <h1>Game {{ game.id }} - {{ game.name }}</h1>
 <p>This game was created by {{ game.creator }}.</p>
-<p>{{ game.active_players }}/{{ game.max_players }} players have joined.</p>
-{% if game.active_players < game.max_players %}
-<p>You can join by <a href='/test'>clicking here</a>.</p>
+<p>{{ active_players }}/{{ game.max_players }} players have joined.</p>
+{% if already_joined %}
+<p>You've joined! Sit back and wait for the start.</p>
+{% elif active_players < game.max_players %}
+<p>You can join by <a href='{% url 'join_game' game.id %}'>clicking here</a>.</p>
+{% else %}
+<p>Sorry, this game is full.</p>
 {% endif %}
 {% endblock %}
